# pybind-pdm-demo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  pdm_build.py  pyproject.toml
src/pybind_pdm_demo/csrc/: main.cpp
tests/unit/: test_demo.py
