[project]
name = "pybind-pdm-demo"
dynamic = ["version"]
description = "A demo project using pybind11 and CMake with PDM"
authors = [
    {name = "rudeigerc", email = "rudeigerc@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = [
    "pdm-backend",
    "setuptools",
    "wheel",
    "pybind11",
    "mypy"
]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.build]
run-setuptools = true
excludes = ["src/pybind_pdm_demo/csrc/**/*.cpp"]

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.3",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest -v tests"
stubgen = "stubgen -p demo -o src"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "pypi"

[[tool.pdm.source]]
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
name = "sjtug"

[tool.pdm.version]
source = "scm"

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.isort]
known-first-party = ["pybind_pdm_demo"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
